# xwirless

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GUIDA_RAPIDA.txt  LICENSE  PROGETTO_COMPLETATO.md  README.md  SECURITY.md  avvio_rapido.sh  install.sh  interfaccia_accattivante.py  interfaccia_ascii.py  interfaccia_interattiva.py  interfaccia_kali.py  interfaccia_windows.py  interface_english.py  kali_start.sh  pyproject.toml  quick_start.sh  requirements.txt  setup.py  setup_kali.sh  termux_start.sh  test_cli.py  test_example.py  test_semplice.py
xwirless/: __init__.py  __main__.py  cli.py  db.py  parser.py  report.py  safety.py  scanner.py  utils.py
